# axibem

./: README.md  pyproject.toml
axibem/: __init__.py  disk.py  kernel.py
axibem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
axibem/tests/: test_disk.py
