[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axibem"
version = "0.1.0"
description = "Axisymmetric collocation BEM solver for electrostatic capacitance problems"
readme = "README.md"
authors = [{ name = "Eremey Valetov", email = "evv@msu.edu" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.urls]
Homepage = "https://github.com/evvaletov/axibem"

[tool.setuptools.packages.find]
include = ["axibem*"]
